--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
-<h1>Shaykh – Data Analyst Portfolio</h1>
+<h1>Sameer – Data Analyst Portfolio</h1>
 
-<p>Junior Data Analyst skilled in Python, Power BI, and Machine Learning</p>
+<p>I am a Junior Data Analyst skilled in Python, Power BI, SQL, and Machine Learning.</p>
+
+<h2>Skills</h2>
+
+<ul>
+<li>Python (Pandas, NumPy, Matplotlib, Scikit-learn)</li>
+<li>Power BI Dashboard Development</li>
+<li>Machine Learning</li>
+<li>SQL Data Analysis</li>
+</ul>
 
 <h2>Projects</h2>
 
 <ul>
-<li>Customer Churn Prediction</li>
+<li>Customer Churn Prediction – In Progress</li>
 <li>Sales Forecasting</li>
 <li>Sentiment Analysis</li>
 </ul>
 
-<h2>Contact</h2>
+<h2>GitHub</h2>
 
-<p>LinkedIn: Coming Soon</p>
+<p><a href="https://github.com/msameerg">Visit My GitHub Profile</a></p>
+
+<h2>Status</h2>
+
+<p>Actively seeking Junior Data Analyst opportunities.</p>
