--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Sameer – Data Analyst Portfolio</h1>
+<h1>Sameer's – Data Analyst Portfolio</h1>
 
 <p>I am a Junior Data Analyst skilled in Python, Power BI, SQL, and Machine Learning.</p>
 
