--- a/index.html
+++ b/index.html
@@ -1,28 +1,155 @@
-<h1>Sameer's – Data Analyst Portfolio</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Sameer | Data Analyst Portfolio</title>
 
-<p>I am a Junior Data Analyst skilled in Python, Power BI, SQL, and Machine Learning.</p>
+<style>
+
+body {
+    background-color: #0d1117;
+    color: #e6edf3;
+    font-family: Arial;
+    margin: 0;
+}
+
+header {
+    background-color: #161b22;
+    padding: 30px;
+    text-align: center;
+}
+
+h1 {
+    margin: 0;
+}
+
+section {
+    padding: 30px;
+}
+
+.card {
+    background-color: #161b22;
+    padding: 20px;
+    margin: 15px 0;
+    border-radius: 10px;
+}
+
+button {
+    background-color: #238636;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #2ea043;
+}
+
+a {
+    color: #58a6ff;
+    text-decoration: none;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #161b22;
+}
+
+</style>
+
+</head>
+
+<body>
+
+<header>
+
+<h1>Sameer</h1>
+
+<p>Junior Data Analyst | Python | Power BI | Machine Learning</p>
+
+<a href="https://github.com/msameerg">
+<button>Visit My GitHub</button>
+</a>
+
+</header>
+
+
+<section>
 
 <h2>Skills</h2>
 
-<ul>
-<li>Python (Pandas, NumPy, Matplotlib, Scikit-learn)</li>
-<li>Power BI Dashboard Development</li>
-<li>Machine Learning</li>
-<li>SQL Data Analysis</li>
-</ul>
+<div class="card">
+
+Python, Pandas, NumPy, Matplotlib, Scikit-learn  
+Power BI Dashboard Development  
+SQL Data Analysis  
+Machine Learning & Prediction  
+
+</div>
+
+</section>
+
+
+<section>
 
 <h2>Projects</h2>
 
-<ul>
-<li>Customer Churn Prediction – In Progress</li>
-<li>Sales Forecasting</li>
-<li>Sentiment Analysis</li>
-</ul>
+<div class="card">
 
-<h2>GitHub</h2>
+<h3>Customer Churn Prediction</h3>
 
-<p><a href="https://github.com/msameerg">Visit My GitHub Profile</a></p>
+<p>Machine learning model to predict customer churn.</p>
 
-<h2>Status</h2>
+</div>
 
-<p>Actively seeking Junior Data Analyst opportunities.</p>
+
+<div class="card">
+
+<h3>Sales Forecasting</h3>
+
+<p>Time series forecasting to predict future sales.</p>
+
+</div>
+
+
+<div class="card">
+
+<h3>Sentiment Analysis</h3>
+
+<p>Analyzed customer reviews using NLP.</p>
+
+</div>
+
+</section>
+
+
+<section>
+
+<h2>Contact</h2>
+
+<div class="card">
+
+GitHub:  
+<a href="https://github.com/msameerg">
+
+github.com/msameerg
+
+</a>
+
+</div>
+
+</section>
+
+
+<footer>
+
+Portfolio Website | Sameer | 2026
+
+</footer>
+
+
+</body>
+
+</html>
