--- a/index.html
+++ b/index.html
@@ -1,337 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Sameer | Data Analyst & ML Dev</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-
-  <style>
-
-    :root{
-      --royal-green:#041c18;
-      --royal-green-light:#0b2f28;
-      --gold:#d4af37;
-      --beige:#f5e6c8;
-      --white:#ffffff;
-      --glass:rgba(255,255,255,0.05);
-    }
-
-    *{
-      margin:0;
-      padding:0;
-      box-sizing:border-box;
-    }
-
-    body{
-      font-family:'Inter',sans-serif;
-      background:var(--royal-green);
-      color:var(--beige);
-      overflow-x:hidden;
-    }
-
-
-    /* MAIN GRID */
-
-    .container{
-      display:flex;
-      height:100vh;
-    }
-
-
-    /* LEFT SIDE */
-
-    .left{
-      width:45%;
-      padding:80px;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-      position:relative;
-    }
-
-
-    .identity{
-      position:sticky;
-      top:100px;
-      transition:all .5s ease;
-    }
-
-
-    .identity img{
-      width:140px;
-      border-radius:50%;
-      margin-bottom:25px;
-      transition:all .5s ease;
-    }
-
-
-    .identity.shrink img{
-      opacity:0;
-      transform:translateY(-20px);
-    }
-
-
-    h1{
-      font-family:'Playfair Display',serif;
-      font-size:52px;
-      color:var(--gold);
-    }
-
-
-    h2{
-      font-weight:300;
-      margin-top:10px;
-      color:var(--beige);
-    }
-
-
-    nav{
-      margin-top:40px;
-    }
-
-
-    nav a{
-      display:block;
-      margin-bottom:15px;
-      color:var(--beige);
-      text-decoration:none;
-      transition:.3s;
-    }
-
-
-    nav a:hover{
-      color:var(--gold);
-      transform:translateX(8px);
-    }
-
-
-    /* RIGHT SIDE APP PANEL */
-
-    .right{
-      width:55%;
-      background:var(--royal-green-light);
-      border-left:1px solid rgba(212,175,55,0.3);
-      overflow-y:auto;
-      padding:60px;
-    }
-
-
-    .card{
-      background:var(--glass);
-      padding:30px;
-      margin-bottom:30px;
-      border-radius:12px;
-      cursor:pointer;
-      transition:.4s;
-      border:1px solid transparent;
-    }
-
-
-    .card:hover{
-      border:1px solid var(--gold);
-      transform:translateX(-10px);
-    }
-
-
-    .detail{
-      position:fixed;
-      left:-100%;
-      top:0;
-      height:100%;
-      width:45%;
-      background:var(--royal-green-light);
-      padding:80px;
-      transition:.6s;
-      overflow:auto;
-      z-index:10;
-    }
-
-
-    .detail.active{
-      left:0;
-    }
-
-
-    .close{
-      margin-bottom:30px;
-      cursor:pointer;
-      color:var(--gold);
-    }
-
-
-    footer{
-      margin-top:60px;
-      font-size:14px;
-      opacity:.6;
-    }
-
-
-    /* SCROLLBAR */
-
-    ::-webkit-scrollbar{
-      width:6px;
-    }
-
-
-    ::-webkit-scrollbar-thumb{
-      background:var(--gold);
-    }
-
-
-    /* MOBILE */
-
-    @media(max-width:900px){
-
-      .container{
-        flex-direction:column;
-      }
-
-      .left,.right{
-        width:100%;
-      }
-
-      .detail{
-        width:100%;
-      }
-
-    }
-
-
-  </style>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Christopher Walker | Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        body { background-color: #1a1c23; color: #ffffff; }
+        .card { background-color: #252833; border-radius: 1rem; }
+        .inner-card { background-color: #2d313e; transition: transform 0.2s; }
+        .inner-card:hover { transform: translateY(-2px); }
+        .accent-orange { color: #ff8c42; }
+        .bg-accent { background-color: #ff8c42; }
+    </style>
 </head>
-<body>
-
-
-<div class="container">
-
-
-  <!-- LEFT -->
-
-  <div class="left">
-
-    <div class="identity" id="identity">
-
-      <img src="https://via.placeholder.com/200" alt="Sameer">
-
-      <h1>Sameer</h1>
-
-      <h2>Data Analyst & ML Developer</h2>
-
-
-      <nav>
-
-        <a href="#">Projects</a>
-
-        <a href="#">About</a>
-
-        <a href="#">Contact</a>
-
-      </nav>
-
-
-    </div>
-
-
-  </div>
-
-
-
-  <!-- RIGHT -->
-
-  <div class="right" onscroll="scrollEffect()">
-
-
-    <div class="card" onclick="openDetail()">
-
-      <h3>Telco Customer Churn</h3>
-
-      <p>ML model predicting churn with recall optimization.</p>
-
-    </div>
-
-
-    <div class="card">
-
-      <h3>Customer Segmentation</h3>
-
-      <p>KMeans clustering for marketing insights.</p>
-
-    </div>
-
-
-    <div class="card">
-
-      <h3>Sales Forecasting</h3>
-
-      <p>SARIMA time series forecasting.</p>
-
-    </div>
-
-
-    <footer>
-
-      © Sameer Portfolio
-
-    </footer>
-
-
-  </div>
-
-
-</div>
-
-
-<!-- DETAIL PANEL -->
-
-<div class="detail" id="detail">
-
-  <div class="close" onclick="closeDetail()">← Back</div>
-
-
-  <h2>Telco Customer Churn</h2>
-
-
-  <p>
-
-    Placeholder project details.
-
-
-  </p>
-
-
-</div>
-
-
-<script>
-
-
-function openDetail(){
-
-  document.getElementById("detail").classList.add("active");
-
-}
-
-
-function closeDetail(){
-
-  document.getElementById("detail").classList.remove("active");
-
-}
-
-
-function scrollEffect(){
-
-  document.getElementById("identity").classList.add("shrink");
-
-}
-
-
-</script>
-
+<body class="p-4 md:p-8 flex flex-col items-center">
+
+    <nav class="card p-3 mb-8 flex gap-6 justify-center w-full max-w-2xl">
+        <a href="#" class="text-gray-400 hover:text-white"><i class="fa-solid fa-house"></i></a>
+        <a href="#" class="text-gray-400 hover:text-white"><i class="fa-solid fa-user"></i></a>
+        <a href="#" class="text-gray-400 hover:text-white"><i class="fa-solid fa-folder"></i></a>
+        <a href="#" class="text-gray-400 hover:text-white"><i class="fa-solid fa-briefcase"></i></a>
+        <a href="#" class="text-gray-400 hover:text-white"><i class="fa-solid fa-key"></i></a>
+        <a href="#" class="text-gray-400 hover:text-white"><i class="fa-solid fa-pen-to-square"></i></a>
+        <a href="#" class="text-gray-400 hover:text-white"><i class="fa-solid fa-envelope"></i></a>
+    </nav>
+
+    <section class="card p-8 w-full max-w-2xl mb-6 relative overflow-hidden">
+        <div class="flex flex-col md:flex-row items-center gap-6">
+            <div class="relative">
+                <img src="https://via.placeholder.com/120" alt="Profile" class="rounded-full border-4 border-gray-700 w-32 h-32 object-cover">
+            </div>
+            <div class="text-center md:text-left">
+                <h1 class="text-3xl font-bold">Christopher Walker</h1>
+                <p class="text-gray-400 mb-4">Creative Web Designer</p>
+                <p class="text-gray-500 text-sm max-w-sm">
+                    Hi, I'm Christopher, a creative Web Designer building visually stunning websites.
+                </p>
+                <div class="flex gap-4 mt-4 justify-center md:justify-start">
+                    <a href="#" class="accent-orange hover:text-white"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="accent-orange hover:text-white"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="accent-orange hover:text-white"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" class="accent-orange hover:text-white"><i class="fa-brands fa-dribbble"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="card p-8 w-full max-w-2xl mb-6">
+        <h2 class="text-xl font-bold mb-6 accent-orange">Projects</h2>
+        
+        <div class="space-y-4">
+            <div class="inner-card p-4 rounded-xl flex items-center justify-between cursor-pointer">
+                <div class="flex items-center gap-4">
+                    <div class="w-12 h-12 bg-gray-600 rounded-lg overflow-hidden">
+                        <img src="https://via.placeholder.com/50" alt="Project">
+                    </div>
+                    <div>
+                        <h3 class="font-bold">Damas</h3>
+                        <p class="text-xs text-gray-400">Agency Framer Template</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-arrow-right text-gray-500"></i>
+            </div>
+
+            <div class="inner-card p-4 rounded-xl flex items-center justify-between cursor-pointer">
+                <div class="flex items-center gap-4">
+                    <div class="w-12 h-12 bg-gray-600 rounded-lg overflow-hidden">
+                        <img src="https://via.placeholder.com/50" alt="Project">
+                    </div>
+                    <div>
+                        <h3 class="font-bold">Najm</h3>
+                        <p class="text-xs text-gray-400">SaaS Framer Template</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-arrow-right text-gray-500"></i>
+            </div>
+
+            <div class="inner-card p-4 rounded-xl flex items-center justify-between cursor-pointer">
+                <div class="flex items-center gap-4">
+                    <div class="w-12 h-12 bg-gray-600 rounded-lg overflow-hidden">
+                        <img src="https://via.placeholder.com/50" alt="Project">
+                    </div>
+                    <div>
+                        <h3 class="font-bold">Revo</h3>
+                        <p class="text-xs text-gray-400">Free Framer Template</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-arrow-right text-gray-500"></i>
+            </div>
+        </div>
+    </section>
+
+    <section class="card p-8 w-full max-w-2xl">
+        <h2 class="text-xl font-bold mb-6 accent-orange">Services</h2>
+        <div class="inner-card p-4 rounded-xl flex items-center justify-between cursor-pointer">
+            <div class="flex items-center gap-4">
+                <div class="w-12 h-12 bg-accent rounded-lg flex items-center justify-center">
+                    <i class="fa-solid fa-circle-info text-black text-xl"></i>
+                </div>
+                <h3 class="font-bold">Custom Web Design</h3>
+            </div>
+            <i class="fa-solid fa-arrow-right text-gray-500"></i>
+        </div>
+    </section>
 
 </body>
 </html>
