--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                 </p>
                 <div class="flex flex-wrap gap-4 pt-4 justify-center md:justify-start">
                     <a href="#projects" class="px-6 py-3 bg-accent text-bgDark font-semibold rounded-md hover:bg-accentHover transition-colors shadow-[0_0_15px_rgba(6,182,212,0.3)]">View Projects</a>
-                    <a href="https://github.com/sameer" target="_blank" class="px-6 py-3 bg-cardDark text-textMain font-semibold rounded-md border border-slate-700 hover:border-accent hover:text-accent transition-all flex items-center gap-2"><i class="fa-brands fa-github"></i> GitHub</a>
+                    <a href="https://github.com/msameerg" target="_blank" class="px-6 py-3 bg-cardDark text-textMain font-semibold rounded-md border border-slate-700 hover:border-accent hover:text-accent transition-all flex items-center gap-2"><i class="fa-brands fa-github"></i> GitHub</a>
                 </div>
             </div>
             <div class="relative group">
                 <div class="absolute -inset-1 bg-gradient-to-r from-accent to-blue-600 rounded-full blur opacity-25 group-hover:opacity-50 transition duration-1000 group-hover:duration-200"></div>
-                <img src="https://ui-avatars.com/api/?name=Sameer&background=0f172a&color=06b6d4&size=200" alt="Sameer Profile" class="relative rounded-full border-2 border-slate-700 w-48 h-48 md:w-64 md:h-64 object-cover">
+                <img src="profile.jpeg" alt="Sameer Profile" class="relative rounded-full border-2 border-slate-700 w-48 h-48 md:w-64 md:h-64 object-cover">
             </div>
         </section>
 
