--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
             <p class="text-textMuted mb-8">
                 Whether you have a question, a project proposal, or just want to say hi, my inbox is always open. I'll try my best to get back to you!
             </p>
-            <a href="mailto:sameer@email.com" class="inline-block px-8 py-4 bg-transparent text-accent border border-accent rounded-md hover:bg-accent/10 transition-colors font-mono mb-12">Say Hello</a>
+            <a href="mailto:msgulzar08@gmail.com" class="inline-block px-8 py-4 bg-transparent text-accent border border-accent rounded-md hover:bg-accent/10 transition-colors font-mono mb-12">Say Hello</a>
             
             <div class="flex justify-center gap-6 text-2xl text-slate-400">
-                <a href="https://github.com/sameer" target="_blank" class="hover:text-accent transition-colors"><i class="fa-brands fa-github"></i></a>
-                <a href="#" class="hover:text-accent transition-colors"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="mailto:sameer@email.com" class="hover:text-accent transition-colors"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://github.com/msameerg" target="_blank" class="hover:text-accent transition-colors"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/muhammad-sameer-gulzar-27b5593b2/" class="hover:text-accent transition-colors"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="mailto:msgulzar08@gmail.com" class="hover:text-accent transition-colors"><i class="fa-solid fa-envelope"></i></a>
             </div>
         </section>
 
